--- a/style-application.css
+++ b/style-application.css
@@ -59,3 +59,8 @@ body {
   background-attachment: fixed;  
   background-size: cover;
 }
+button1 {
+  background-color: white;
+  color: black;
+  border: 2px solid #4CAF50; /* Green */
+}
